--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,41 +4,28 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
-    <!--<application-->
-      <!--android:name=".MainApplication"-->
-      <!--android:label="@string/app_name"-->
-      <!--android:icon="@mipmap/ic_launcher"-->
-      <!--android:allowBackup="false"-->
-      <!--android:theme="@style/AppTheme">-->
-      <!--<activity-->
-        <!--android:name=".MainActivity"-->
-        <!--android:label="@string/app_name"-->
-        <!--android:theme="@style/Theme.AppCompat.Transparent.NoActionBar"-->
-        <!--android:configChanges="keyboard|keyboardHidden|orientation|screenSize"-->
-        <!--android:windowSoftInputMode="adjustResize">-->
-        <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-      <!--</activity>-->
-      <!--&lt;!&ndash;<activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />&ndash;&gt;-->
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-
+      android:name=".MainApplication"
+      android:label="@string/app_name"
+      android:icon="@mipmap/ic_launcher"
+      android:allowBackup="false"
+      android:theme="@style/AppTheme">
+      <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.Transparent.NoActionBar"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:windowSoftInputMode="adjustResize">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+      </activity>
+      <!--<activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />-->
         <service
-                android:name=".FloatingBubbleService"
-                android:enabled="true"
-                android:exported="false"/>
+            android:name=".FloatingBubbleService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
