--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.facebook.rebound:rebound:0.3.8'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev193-1.23.0'
 }
 
 // Run this once to be able to run the application with BUCK
